Fix: timepicker error messages vertical align.

--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -10,3 +10,9 @@ fieldset, .fieldset {
   margin-top: $line-height-computed;
   margin-bottom: $line-height-computed;
 }
+
+.bootstrap-timepicker {
+  .form-group {
+    vertical-align: top;
+  }
+}
